Fixed: ItemViewSettings expand/collapse zone is improved
Previously, you had to click on the panel header---but not the panel title---
to expand or collapse ItemViewSettings. Now there is a button in just the
right spot.

Closes #53
For #64

--- a/css/vitrail.css
+++ b/css/vitrail.css
@@ -35,6 +35,7 @@
 
 .result-list { padding-bottom: 13px; position: relative; }
 .result-list .pagination { margin: 0; }
+.result-list-settings .panel-heading button { color: #fffdf7; }
 .result-list-settings form > :last-child { margin-bottom: 0; }
 .result-list .modal, .result-list .modal-backdrop { position: absolute; }
 
